# MixedPrecisionSVM

./: CMakeLists.txt  README.md  main_lambdas.cpp  main_wb.cpp
datasets/: banknote_test.csv  banknote_train.csv  breast_cancer_test.csv  breast_cancer_train.csv  sonar_test.csv  sonar_train.csv
matlab/: load_BNA.m  load_SONAR.m  load_WDBC.m  non_linear_svm_train.m  non_linear_svm_train_posit_constraints.m  svm_train.m  svm_train_posit_constraints.m  svm_train_posit_constraints_automatic.m
